@@ -10,7 +10,7 @@ except IOError:
 
 setup(
     name='rpqueue',
-    version='0.22',
+    version='0.23',
     description='Use Redis as a priority-enabled and time-based task queue.',
     author='Josiah Carlson',
     author_email='josiah.carlson@gmail.com',
